# email2md

./: README.md  config.toml  pyproject.toml  setup.cfg
email2md/: __main__.py
